Updated Related work (mediawiki)

--- a/Related-work.mediawiki
+++ b/Related-work.mediawiki
@@ -32,6 +32,8 @@ Sounds similar to rr/UndoDB but no mention of performance counters (in 2008 they
 
 [http://citeseer.ist.psu.edu/viewdoc/download;jsessionid=797078D41476F33C75D5E95C4F8D5042?doi=10.1.1.92.8688&rep=rep1&type=pdf TORNADO]
 
+[https://arxiv.org/pdf/1804.01226.pdf iReplay]
+
 == In-Kernel Userspace Recording ==
 
 [https://homes.cs.washington.edu/~luisceze/publications/osdi10-dos.pdf Deterministic Process Groups in dOS]
