--- a/Related-work.mediawiki
+++ b/Related-work.mediawiki
@@ -102,9 +102,11 @@ Out of date with its observations on performance counter behavior, but first pap
 
 [http://www.cs.ucr.edu/~neamtiu/pubs/icse13gomez.pdf Reran]
 
-== Full-tracing debugging ==
+== Omniscient debugging ==
 
-[https://github.com/BinaryAnalysisPlatform/qira Qira]
+[https://github.com/BinaryAnalysisPlatform/qira Qira] Pretty naive impleemntation.
+
+[https://www.tetrane.com/index.html Tetrane] Looks like a great implementation of omniscience. Focused on reverse-engineering applications so has a quite different feature set to Pernosco.
 
 == (Not yet categorized) ==
 
